--- a/test.html
+++ b/test.html
@@ -414,7 +414,7 @@
 
 
 <div class="home-goals" id="home-primary-goals">
-	<h2 class="text-center subname pt-4 pb-4 text-white">Our Primary Goals</h2>
+	<h2 class="text-center subname pt-4 pb-4 text-white boom-opacity">Our Primary Goals</h2>
 	<div class="container home-goal2 pb-4" id="home-goal2">
 		<div class="row">
 			<div class="col-1 text-right mx-0 px-0"><i class="fas fa-thumbs-up"></i></div>
