--- a/contact.html
+++ b/contact.html
@@ -211,23 +211,26 @@
 		</div>
 		<div class="col-lg-6 col-sm-12">
 			<div class="contact-about">
-				<div class="row">
-					<div class="col-12 col-lg-6 pt-0 pt-lg-2">
+
+
+				<div class="row pb-1">
+					<div class="col-12 col-sm-6 pt-0 pt-lg-2">
 						<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
 						<div class="contact-info">
-							<a href="tel:+" class="contact-call">+91 9999999999</a><br>
-							<a href="tel:+" class="contact-call">+91 9999999999</a><br>
-							<a href="#" class="btn btn-success btn-sm whatsapp-button mt-lg-3">Click to Chat on WhatsApp</a><br>
-							<a href="#" class="btn btn-primary btn-sm whatsapp-button mt-lg-3">Click to Call Us</a>
+							<div class="pb-sm-3 pb-2"><a href="tel:+" class="contact-call"><span class="btn btn-primary contact-us-btn"><i class="fas fa-phone-alt"></i></span> +91 9999999999</a><br></div>
+							<div class="pb-sm-3 pb-2"><a href="tel:+" class="contact-call"><span class="btn btn-primary contact-us-btn"><i class="fas fa-phone-alt"></i></span> +91 9999999999</a><br></div>
+							<div class="pb-sm-3 pb-2"><a href="tel:+" class="contact-call"><span class="btn btn-success contact-us-whatsapp"><i class="fab fa-whatsapp"></i></span> +91 9999999999</a><br></div>
 						</div>
 					</div>
-					<div class="col-12 col-lg-6 pt-0 pt-lg-2">
+					<div class="col-12 col-sm-6 pt-0 pt-lg-2">
 						<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
 						<div class="contact-info">email@gmail.com</div>
 						<div class="contact-head"><i class="fas fa-store-alt contact-fa"></i> Address:</div>
 						<div class="contact-info">Address... <br>Address...</div>
 					</div>
 				</div>
+
+
 				
 				<div class="contact-info-special pt-lg-5"><i class="fas fa-home contact-fa"></i> <b>If you live around our location...</b><br>You can also visit us at the above mentioned address to place your orders and have a look at our factory environment.<br>We would love meet you and discuss the orders across table.</div>
 			</div>
