--- a/test.html
+++ b/test.html
@@ -703,6 +703,7 @@
 
 
 	window.onload = function() {
+		alert(window.innerHeight);
 		page_height();
 		boom();
 		setTimeout(function() {page_height();}, 2200);
