--- a/test.html
+++ b/test.html
@@ -703,7 +703,7 @@
 
 
 	window.onload = function() {
-		alert(window.innerHeight);
+		alert(window.innerWidth);
 		page_height();
 		boom();
 		setTimeout(function() {page_height();}, 2200);
