--- a/about.html
+++ b/about.html
@@ -203,21 +203,9 @@
 			{
 				document.getElementById('uni-contact-btn').style.bottom = '25px';
 			}
-			else if(window.innerWidth<=500)
-			{
-				document.getElementById('uni-contact-btn').style.bottom = '30px';
-			}
-			else if(window.innerWidth<=771)
-			{
-				document.getElementById('uni-contact-btn').style.bottom = '40px';
-			}
-			else if(window.innerWidth<=860)
-			{
-				document.getElementById('uni-contact-btn').style.bottom = '60px';
-			}
 			else
 			{
-				document.getElementById('uni-contact-btn').style.bottom = '80px';
+				document.getElementById('uni-contact-btn').style.bottom = '30px';
 			}
 			setTimeout(function() {
 				document.getElementById('uni-contact-btn').style.transition = '0s';
@@ -240,7 +228,7 @@
 			<ul>
 				<li><a class="navbar-item" href="https://preranaenterprises.in"><i class="fas fa-home"></i> Home</a></li>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a class="navbar-item" href="products"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="services"><i class="fas fa-box-open"></i> Our Services</a></li>
 				<li><a class="navbar-item" href="contact"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
@@ -273,15 +261,15 @@
                 <span class="form-required">* is for required.</span>
             </div>
             <label for="name">Name<span class="form-required"> *</span></label>
-            <input type="text" id="name" class="mb-2 form-control pop-contact-input" placeholder="Enter Your Name" autocomplete="off" required></br>
+            <input type="text" id="name" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Name" autocomplete="off" required></br>
             <label for="number">Mobile Number<span class="form-required"> *</span></label>
-            <input type="tel" id="number" class="mb-2 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
+            <input type="tel" id="number" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
         	</br>
             <label for="email">Email Address</label>
-            <input type="email" id="email" class="mb-2 form-control pop-contact-input" placeholder="Enter Your Email" autocomplete="off">
+            <input type="email" id="email" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Email" autocomplete="off">
             </br>
             <label for="message">Message</label><br>
-            <textarea id="message" class="mb-2 form-control pop-contact-input pop-txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
+            <textarea id="message" class="mb-1 mt-lg-1 form-control pop-contact-input pop-txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
             <br>
 
 
@@ -314,7 +302,7 @@
 					<div class="ml-sm-3 ml-0 text-sm-left text-center mb-3 footer-head"><b>Contact Details</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
-						<div class="col-sm-10 col-9 mb-3">Anand Karmarkar<br>Shubham Karmarkar</div>
+						<div class="col-sm-10 col-9 mb-3">Name Surname<br>Name Surname</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-mobile-alt"></i></div>
