--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				document.getElementById('logo-light').style.opacity = '1';
 				document.getElementById('logo-dark').style.opacity = '0';
 				document.getElementById('nav').style.borderBottom = 'none';
-				if(screen.height<830)
+				if(window.innerHeight<830 && window.innerWidth<900)
 				{
 					document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
 				}
@@ -279,21 +279,9 @@
 			{
 				document.getElementById('uni-contact-btn').style.bottom = '25px';
 			}
-			else if(window.innerWidth<=500)
-			{
-				document.getElementById('uni-contact-btn').style.bottom = '30px';
-			}
-			else if(window.innerWidth<=771)
-			{
-				document.getElementById('uni-contact-btn').style.bottom = '40px';
-			}
-			else if(window.innerWidth<=860)
-			{
-				document.getElementById('uni-contact-btn').style.bottom = '60px';
-			}
 			else
 			{
-				document.getElementById('uni-contact-btn').style.bottom = '80px';
+				document.getElementById('uni-contact-btn').style.bottom = '30px';
 			}
 			setTimeout(function() {
 				document.getElementById('uni-contact-btn').style.transition = '0s';
@@ -316,20 +304,22 @@
 			<ul>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-home"></i> Home</a></li>
 				<li><a class="navbar-item" href="about"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a class="navbar-item" href="products"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="services"><i class="fas fa-box-open"></i> Our Services</a></li>
 				<li><a class="navbar-item" href="contact"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
-		<div class="container">
-			<h1 class="banner-title pt-5 text-white text-lg-center">
+		<div class="banner-content">
+			<h1 class="banner-title pt-5 text-white">
 				Corrugated Boxes Tailored to your Needs!
 			</h1>
-			<div class="mx-auto width-changer banner-caption pb-0">
+			<div class="width-changer banner-caption pb-0">
 				<p class="mb-0"><i class="fas fa-boxes"></i> We manufacture all types of corrugated boxes.</p><p class="mb-lg-0"><i class="fab fa-envira"></i> Get products that are environment friendly!<ul class="banner-caption list-unstyled"><li><i class="fas fa-recycle"></i> Recyclable</li><li><i class="fas fa-dumbbell"></i> Sustainable</li><li><i class="fas fa-users-cog"></i> Customisable</li></ul></p>
 			</div>
 			
+
+			<div class="pt-2 pb-sm-4 pb-3"><div class="mr-lg-5 pr-lg-5"><a href="services" class="mr-lg-5 btn btn-danger banner-btn">View Services</a></div></div>
+
 		</div>
-		<div class="container text-lg-right pt-2 pb-sm-4 pb-3 pl-lg-0 pl-5"><div class="mr-lg-5 pr-lg-5"><a href="products" class="mr-lg-5 btn btn-danger review-btn">View Products</a></div></div>
 
 	</div>
 
@@ -356,15 +346,15 @@
                 <span class="form-required">* is for required.</span>
             </div>
             <label for="name">Name<span class="form-required"> *</span></label>
-            <input type="text" id="name" class="mb-2 form-control pop-contact-input" placeholder="Enter Your Name" autocomplete="off" required></br>
+            <input type="text" id="name" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Name" autocomplete="off" required></br>
             <label for="number">Mobile Number<span class="form-required"> *</span></label>
-            <input type="tel" id="number" class="mb-2 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
+            <input type="tel" id="number" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
         	</br>
             <label for="email">Email Address</label>
-            <input type="email" id="email" class="mb-2 form-control pop-contact-input" placeholder="Enter Your Email" autocomplete="off">
+            <input type="email" id="email" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Email" autocomplete="off">
             </br>
             <label for="message">Message</label><br>
-            <textarea id="message" class="mb-2 form-control pop-contact-input pop-txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
+            <textarea id="message" class="mb-1 mt-lg-1 form-control pop-contact-input pop-txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
             <br>
 
 
@@ -475,16 +465,16 @@
 			<div class="img-strip" id="img-strip">
 				<div class="image-move"><img src="images/logofull.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				<div class="image-move"><img src="images/3.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/2.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/4882.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				<div class="image-move"><img src="images/longlogo.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				<div class="image-move"><img src="images/recycle.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/triangles_bg.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 			</div>
 		</div>
 
 
-		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy boom-opacity">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="reviews" class="btn btn-primary review-btn">Read Reviews</a></div>
+		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy boom-opacity">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p></div>
 
 	</div>
 </div>
@@ -546,7 +536,7 @@
 					<div class="ml-sm-3 ml-0 text-sm-left text-center mb-3 footer-head"><b>Contact Details</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
-						<div class="col-sm-10 col-9 mb-3">Anand Karmarkar<br>Shubham Karmarkar</div>
+						<div class="col-sm-10 col-9 mb-3">Name Surname<br>Name Surname</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-mobile-alt"></i></div>
@@ -554,7 +544,7 @@
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="far fa-envelope"></i></div>
-						<div class="col-sm-10 col-9 mb-3">shubham.preranaenterprises.in</div>
+						<div class="col-sm-10 col-9 mb-3">email.email.com</div>
 					</div>
 				</div>
 
@@ -563,7 +553,7 @@
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></i></div>
-						<div class="col-sm-10 col-9 mb-3 footer-address">At Gavhe Post,<br>Dapoli, Ratnagiri,<br>Maharashtra-415712,<br>India.</div>
+						<div class="col-sm-10 col-9 mb-3 footer-address">Address...<br>Address...,<br>Address...,<br>Address...</div>
 					</div>
 					<div class="text-center text-lg-left pb-2">
 						<a href="#" class="btn btn-success py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fab fa-whatsapp"></i> WhatsApp</a>
@@ -592,7 +582,7 @@
 <script type="text/javascript">
 
 
-	setTimeout(function() {if(screen.height<830 && window.scrollY<50){window.scroll(0,60);}}, 3500);
+	setTimeout(function() {if(window.innerHeight<830 && window.scrollY<50 && window.innerWidth<900){window.scroll(0,60);}}, 3500);
 
 	if(window.scrollY>50)
 	{
@@ -614,7 +604,7 @@
 	}
 	else if(window.innerWidth<870)
 	{
-		if(screen.height<830)
+		if(window.innerHeight<830 && window.innerWidth<900)
 		{
 			document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
 		}
@@ -629,7 +619,7 @@
 	}
 	else
 	{
-		if(screen.height<830)
+		if(window.innerHeight<830 && window.innerWidth<900)
 		{
 			document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
 		}
