--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 			<ul>
 				<li><a class="navbar-item" href="https://preranaenterprises.in"><i class="fas fa-home"></i> Home</a></li>
 				<li><a class="navbar-item" href="about"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a class="navbar-item" href="products"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="services"><i class="fas fa-box-open"></i> Our Services</a></li>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
