update footer and tab color

--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
 	<meta property="twitter:image" content="" />
 
 	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="">
+	<meta name="theme-color" content="#33485a">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="">
+	<meta name="msapplication-navbutton-color" content="#33485a">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#33485a">
 
 	<script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" data-auto-add-css="false"></script>
 	<link href="https://use.fontawesome.com/releases/v5.13.0/css/svg-with-js.css" rel="stylesheet" />
