--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 	<meta property="twitter:image" content="" />
 
 	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="">
+	<meta name="theme-color" content="#33485a">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="">
+	<meta name="msapplication-navbutton-color" content="#33485a">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#33485a">
 
 	<script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" data-auto-add-css="false"></script>
 	<link href="https://use.fontawesome.com/releases/v5.13.0/css/svg-with-js.css" rel="stylesheet" />
@@ -533,20 +533,32 @@
 
 
 				<div class="col-lg-4 col-sm-6 col-12">
-					<div class="ml-sm-3 ml-0 text-sm-left text-center mb-3 footer-head"><b>Contact Details</b></div>
+					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-left mb-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
-						<div class="col-sm-10 col-9 mb-3">Name Surname<br>Name Surname</div>
+						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-sm-10 col-9 mb-3">9999999999<br>9999999999</div>
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-fish"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Fisheries</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="far fa-envelope"></i></div>
-						<div class="col-sm-10 col-9 mb-3">email.email.com</div>
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-apple-alt"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Fruits</div>
+					</div>
+					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-seedling"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Vegetables</div>
+					</div>
+					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-industry"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Manufacturing sector</div>
+					</div>
+					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-dolly-flatbed"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Transportation</div>
 					</div>
 				</div>
+
 
 
 				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
