--- a/about.html
+++ b/about.html
@@ -304,6 +304,10 @@
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
 					</div>
 					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-globe"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Exports</div>
+					</div>
+					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-fish"></i></div>
 						<div class="col-sm-10 col-9 mb-2">Fisheries</div>
 					</div>
@@ -442,6 +446,7 @@
 
 
 	window.onresize = function() {
+		navchange();
 
 		if(document.getElementById('check').checked)
 		{
