--- a/services.html
+++ b/services.html
@@ -284,7 +284,38 @@
 
 
 
+<div class="quote">
+	<div class="container text-center">
+		<blockquote class="blockquote mb-0 font-italic font-weight-bold py-3 services-quote">
+		  <p class="mb-0 py-2">We provide services in many diverse sectors.<br>Customer satisfaction being our topmost priority, we will make sure you get best experience while doing business with us!</p>
+		</blockquote>
+	</div>
+</div>
 
+
+
+<div class="container py-4">
+	<div class="row">
+		<div class="col-md-4 col-sm-6 col-12 services-cards">
+			<div class="row">
+				<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-globe"></i></div>
+				<div class="col-sm-12 col-9 text-sm-center text-left services-title my-sm-0 my-auto">Export Quality Cartons</div>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-6 col-12 services-cards">
+			<div class="row">
+				<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-globe"></i></div>
+				<div class="col-sm-12 col-9 text-sm-center text-left services-title my-sm-0 my-auto">Export Quality Cartons</div>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-6 col-12 services-cards">
+			<div class="row">
+				<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-globe"></i></div>
+				<div class="col-sm-12 col-9 text-sm-center text-left services-title my-sm-0 my-auto">Export Quality Cartons</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
@@ -303,6 +334,10 @@
 					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-left mb-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
+					</div>
+					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-globe"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Exports</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-fish"></i></div>
@@ -443,6 +478,7 @@
 
 
 	window.onresize = function() {
+		navchange();
 
 		if(document.getElementById('check').checked)
 		{
