--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<meta name="author" content="Abhishek Joshi">
+	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
 
 	<!--whatsapp and fb-->
@@ -340,24 +340,24 @@
 						<div class="col-sm-10 col-9 mb-2">Exports</div>
 					</div>
 					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-people-carry"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Consumer Goods</div>
+					</div>
+					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-fish"></i></div>
 						<div class="col-sm-10 col-9 mb-2">Fisheries</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-apple-alt"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Fruits</div>
+						<div class="col-sm-10 col-9 mb-2">Food industry</div>
+					</div>
+					<div class="row footer-data">
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-oil-can"></i></div>
+						<div class="col-sm-10 col-9 mb-2">Oil/Edible Oil</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-seedling"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Vegetables</div>
-					</div>
-					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-industry"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Manufacturing sector</div>
-					</div>
-					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-dolly-flatbed"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Transportation</div>
+						<div class="col-sm-10 col-9 mb-2">Agro-chemical Industry</div>
 					</div>
 				</div>
 
