--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<meta name="author" content="Abhishek Joshi">
+	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
 
 	<!--whatsapp and fb-->
