--- a/services.html
+++ b/services.html
@@ -311,7 +311,7 @@
 					<div class="position-absolute service-try" id="try1"></div>
 					<div class="row">
 						<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-globe"></i></div>
-						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto">Export Quality Cartons</div>
+						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto"><label for="expand1">Export Quality Cartons</label></div>
 					</div>
 
 					<div class="container text-center services-para pt-lg-4 py-2 service-no">We provide export quality corrugated cartons mainly used for export of fisheries, fruits, vegetables, mechanical equipments, etc.</div>
@@ -329,7 +329,7 @@
 					<div class="position-absolute service-try" id="try2"></div>
 					<div class="row">
 						<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-user-cog"></i></div>
-						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto">Customized Cartons</div>
+						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto"><label for="expand2">Customized Cartons</label></div>
 					</div>
 
 					<div class="container text-center services-para pt-lg-4 py-2 service-no">We understand your requirements and provide corrugated boxes and sheets as per your specifications with best in class quality.</div>
@@ -347,7 +347,7 @@
 					<div class="position-absolute service-try" id="try3"></div>
 					<div class="row">
 						<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-scroll"></i></div>
-						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto">Finest Corrugated Sheets</div>
+						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto"><label for="expand3">Finest Corrugated Sheets</label></div>
 					</div>
 
 					<div class="container text-center services-para pt-lg-4 py-2 service-no">We provide exclusive corrugated sheets as per your required size and specifications. Our size range is __ to __.</div>
@@ -365,7 +365,7 @@
 					<div class="position-absolute service-try" id="try4"></div>
 					<div class="row">
 						<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-apple-alt"></i></div>
-						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto">Cartons for Food</div>
+						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto"><label for="expand4">Cartons for Food</label></div>
 					</div>
 
 					<div class="container text-center services-para pt-lg-4 py-2 service-no">We provide high quality corrugated boxes for your fruits and vegetables with perfect ventilation.</div>
@@ -383,7 +383,7 @@
 					<div class="position-absolute service-try" id="try5"></div>
 					<div class="row">
 						<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-globe"></i></div>
-						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto">Export Quality Cartons</div>
+						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto"><label for="expand5">Export Quality Cartons</label></div>
 					</div>
 
 					<div class="container text-center services-para pt-lg-4 py-2 service-no">We provide export quality corrugated cartons mainly used for export of fisheries, fruits, vegetables, mechanical equipments, etc.</div>
@@ -401,7 +401,7 @@
 					<div class="position-absolute service-try" id="try6"></div>
 					<div class="row">
 						<div class="col-sm-12 col-3 text-center services-icon my-sm-0 my-auto"><i class="fas fa-globe"></i></div>
-						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto">Export Quality Cartons</div>
+						<div class="col-sm-12 col-9 px-sm-3 pl-0 text-sm-center text-left services-title my-sm-0 my-auto"><label for="expand6">Export Quality Cartons</label></div>
 					</div>
 
 					<div class="container text-center services-para pt-lg-4 py-2 service-no">We provide export quality corrugated cartons mainly used for export of fisheries, fruits, vegetables, mechanical equipments, etc.</div>
