--- a/index.html
+++ b/index.html
@@ -544,34 +544,34 @@
 			<div class="row">
 
 
-				<div class="col-lg-4 col-sm-6 col-12">
-					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-left mb-3 footer-head"><b>Services</b></div>
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
+					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-center text-sm-left mb-2 mb-sm-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-globe"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Exports</div>
+						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Exports</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-people-carry"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Consumer Goods</div>
+						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Consumer Goods</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-fish"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Fisheries</div>
+						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Fisheries</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-apple-alt"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Food industry</div>
+						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Food industry</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-oil-can"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Oil/Edible Oil</div>
+						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Oil/Edible Oil</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-seedling"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Agro-chemical Industry</div>
+						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Agro-chemical Industry</div>
 					</div>
 				</div>
 
